--- a/.github/workflows/generate-sitemap.yml
+++ b/.github/workflows/generate-sitemap.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Generate sitemap
         uses: cicirello/generate-sitemap@v1
         with:
-          base-url-path: https://sidhiandassociates.github.io/
+          base-url-path: https://sidhiandassociates.com/
           sitemap-format: xml
       - name: Remove .html extensions from sitemap
         run: sed -i 's/\.html//g' sitemap.xml
